src/components/layout.css
@font-face {
  font-family: Cinzel;
  src: url(../fonts/Cinzel-Bold.otf);
}

@font-face {
  font-family: SourceSansPro;
  src: url(../fonts/SourceSansPro-Light.otf);
}

.center {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: justify;
}

.link {
  font-size: 1.5em;
  font-weight: 200;
  margin-top: 50px;
  align-self: center;
  font-style: italic;
  color: #6c6c6c;
}

.link > a:hover {
  border-bottom: 2px solid #6c6c6c;
}

.heading {
  font-family: Cinzel;
  font-size: 8em;
  background: linear-gradient(to right, rgb(221, 175, 115) 0%, rgb(221, 175, 115) 20%, rgb(206, 37, 138) 100%);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.intro {
  font-family: SourceSansPro;
  font-size: 1.5em;
  word-spacing: 1px;
  letter-spacing: 0.8px;
  font-style: italic;
  text-align-last: center;
}

.intro > p {
  font-weight: 100;
  color: grey;
}

a {
  display: inline-block;
  text-decoration: none;
  color: inherit;
}

#content {
  width: 70%;
  text-align: justify;
}

img {
  width: 300px;
  height: 300px;
}

canvas {
  width: 400px;
  height: 400px;
  border-radius: 5px;
  -webkit-box-shadow: 3px 6px 9px 0px rgba(199,197,199,1);
  -moz-box-shadow: 3px 6px 9px 0px rgba(199,197,199,1);
  box-shadow: 3px 6px 9px 0px rgba(199,197,199,1);
}

#shader-name {
  font-size: 3em;
  padding: 10px;
  margin-left: 10px;
  font-family: SourceSansPro;
  letter-spacing: 1px;
  font-weight: 500;
  color: #4f4f4f;
}

.shader-grid-container {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

@media only screen and (max-width: 480px) {
  .heading {
    font-size: 2.8em;
  }

  .intro {
    font-size: 1em;
  }

  #content {
    width: 90%;
    text-align: justify;
  }

  .link {
    font-size: 1em;
    margin-right: 5%;
  }

  .shader-grid-container {
    display: grid;
    grid-template-columns: 1fr;
    justify-items: center;  
  }

  canvas {
    width: 300px;
    height: 300px;
  }

  #shader-name {
    font-size: 2em;
  }
}

